syntax = "proto3";
package joltify.joltifychain.invoice;

// this line is used by starport scaffolding # proto/tx/import
import "invoice/place_order.proto";
import "invoice/sell_order.proto";
//import "invoice/invoice.proto";



import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "gitlab.com/oppy-finance/oppychain/x/invoice/types";

// Msg defines the Msg service.
service Msg {
    // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreatePlaceOrder(MsgCreatePlaceOrder) returns (MsgCreatePlaceOrderResponse);
  rpc CreateSellOrder(MsgCreateSellOrder) returns (MsgCreateSellOrderResponse);
  rpc DeleteSellOrder(MsgDeleteSellOrder) returns (MsgDeleteSellOrderResponse);
  rpc CreateInvoice(MsgCreateInvoice) returns (MsgCreateInvoiceResponse);
  rpc DeleteInvoice(MsgDeleteInvoice) returns (MsgDeleteInvoiceResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreatePlaceOrder {
  bytes creator = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string sellOrderID= 3;
  bytes amount= 4  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  bytes price= 5  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}
message MsgCreatePlaceOrderResponse { string placeOrderID = 1;}


message MsgCreateSellOrder {
  bytes creator = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string sellInvoiceID= 2;
  bytes amount= 3  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  google.protobuf.Duration sellDuration = 4 [(gogoproto.stdduration) = true,(gogoproto.nullable)=false];
  bytes price= 5  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}
message MsgCreateSellOrderResponse {
  string orderID=1;
}

message MsgDeleteSellOrder {
  bytes creator = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string sellOrderID = 2;
}
message MsgDeleteSellOrderResponse { }

message MsgCreateInvoice {
  string creator = 1 ;
  string origOwner = 2  ;
  string name = 3;
  string url = 4;
  string amount = 5;
  string apy = 6;
  bool isRootOwner = 7;
}
message MsgCreateInvoiceResponse {
  string invoiceID=1;
}


message MsgDeleteInvoice {
  string creator = 1 ;
  string origOwner= 2;
  string name= 3;
}
message MsgDeleteInvoiceResponse { }
